# MCP_RAG

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
spec/: historia.md  specs.md
src/: server.py
src/application/: document_service.py  indexing_service.py  search_service.py
src/config/: logging.py  settings.py
src/domain/: interfaces.py  models.py
src/guides/: README.md
src/guides/delphi/: README.md  componentes.md
src/guides/springboot_docs/: spring-boot_reference.md  spring-boot_reference_actuator_auditing.html.md  spring-boot_reference_actuator_cloud-foundry.html.md  spring-boot_reference_actuator_enabling.html.md  spring-boot_reference_actuator_endpoints.html.md  spring-boot_reference_actuator_http-exchanges.html.md  spring-boot_reference_actuator_index.html.md  spring-boot_reference_actuator_jmx.html.md  spring-boot_reference_actuator_loggers.html.md  spring-boot_reference_actuator_metrics.html.md  spring-boot_reference_actuator_monitoring.html.md  spring-boot_reference_actuator_observability.html.md  spring-boot_reference_actuator_process-monitoring.html.md  spring-boot_reference_actuator_tracing.html.md  spring-boot_reference_data_index.html.md  (+74 more)
src/infrastructure/: bm25_repository.py  chromadb_repository.py  embedding_provider.py  markdown_loader.py  splitter.py  text_loader.py
src/mcp_documentacao.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_embeddings.py  test_indexer.py  test_loader.py  test_search.py  test_splitter.py
